--- a/TimeStamp/Info.plist
+++ b/TimeStamp/Info.plist
@@ -14,5 +14,9 @@
 		<string>Pretendard-SemiBold.otf</string>
 		<string>Pretendard-Thin.otf</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>사진을 촬영하기 위해 카메라 접근 권한이 필요합니다.</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>촬영한 사진을 저장하기 위해 사진 라이브러리 접근 권한이 필요합니다.</string>
 </dict>
 </plist>
