feat: 구글 로그인 구현

--- a/TimeStamp/Info.plist
+++ b/TimeStamp/Info.plist
@@ -29,5 +29,16 @@
 		<string>Pretendard-SemiBold.otf</string>
 		<string>Pretendard-Thin.otf</string>
 	</array>
+    <key>GIDClientID</key>
+    <string>18886173344-ad2jtnksaoa159iacoukvd77csa3gju4.apps.googleusercontent.com</string>
+    <key>CFBundleURLTypes</key>
+    <array>
+      <dict>
+        <key>CFBundleURLSchemes</key>
+        <array>
+          <string>com.googleusercontent.apps.18886173344-ad2jtnksaoa159iacoukvd77csa3gju4</string>
+        </array>
+      </dict>
+    </array>
 </dict>
 </plist>
