--- a/.gitignore
+++ b/.gitignore
@@ -115,4 +115,7 @@ xcuserdata
 /*.gcno
 **/xcshareddata/WorkspaceSettings.xcsettings
 
+# Secrets
+Config/Secrets.xcconfig
+
 # End of https://www.toptal.com/developers/gitignore/api/swift,swiftpackagemanager,swiftpm,cocoapods,xcode
