fix: 네비바 글래스 디자인 제거

--- a/TimeStamp/Info.plist
+++ b/TimeStamp/Info.plist
@@ -36,5 +36,7 @@
 	<string>$(KAKAO_APP_KEY)</string>
 	<key>GOOGLE_CLIENT_ID</key>
 	<string>$(GOOGLE_CLIENT_ID)</string>
+	<key>UIDesignRequiresCompatibility</key>
+	<true/>
 </dict>
 </plist>
