--- a/TimeStamp/Info.plist
+++ b/TimeStamp/Info.plist
@@ -38,5 +38,7 @@
 	</array>
 	<key>UIDesignRequiresCompatibility</key>
 	<true/>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>타임스탬프가 찍힌 사진을 갤러리에 저장하기 위해 사진 라이브러리 접근 권한이 필요합니다.</string>
 </dict>
 </plist>
