fix: 앱이름 통일 (스탬픽)

--- a/TimeStamp/Info.plist
+++ b/TimeStamp/Info.plist
@@ -42,5 +42,12 @@
 	</array>
 	<key>UIDesignRequiresCompatibility</key>
 	<true/>
+    <key>UILaunchScreen</key>
+    <dict>
+        <key>UIImageName</key>
+        <string>LaunchImage</string>
+        <key>UIColorName</key>
+        <string>LaunchColor</string>
+    </dict>
 </dict>
 </plist>
