feat: 템플릿 구현

--- a/TimeStamp/Info.plist
+++ b/TimeStamp/Info.plist
@@ -46,7 +46,8 @@
         
         <string>ClimateCrisisKR-1990.otf</string>
         <string>PartialSansKR-Regular.otf</string>
-		<string>DungGeunMo.otf</string>
+        <string>DungGeunMo.otf</string>
+		<string>EricaOne-Regular.ttf</string>
         
         <string>SUIT-Bold.otf</string>
         <string>SUIT-ExtraBold.otf</string>
