fix: 추적권한, 카메라 권한 요청 위치 변경

--- a/TimeStamp/Info.plist
+++ b/TimeStamp/Info.plist
@@ -28,6 +28,8 @@
 	<array>
 		<string>kakaokompassauth</string>
 	</array>
+	<key>NSUserTrackingUsageDescription</key>
+	<string>앱 기능 개선 및 서비스 분석을 위해 추적 권한이 필요합니다.</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Pretendard-Black.otf</string>
