feat: 수저화면 > 광고보고 로고지우기

--- a/Secrets.xcconfig
+++ b/Secrets.xcconfig
@@ -9,3 +9,7 @@ GOOGLE_CLIENT_ID = 18886173344-ad2jtnksaoa159iacoukvd77csa3gju4.apps.googleuserc
 
 // Google URL Scheme (reverse client ID)
 GOOGLE_REVERSED_CLIENT_ID = com.googleusercontent.apps.18886173344-ad2jtnksaoa159iacoukvd77csa3gju4
+
+// AdMob Application ID
+GAD_APP_ID = ca-app-pub-7896890737820919~5408954284
+
