feat: templage digital 5

--- a/TimeStamp/Info.plist
+++ b/TimeStamp/Info.plist
@@ -62,6 +62,7 @@
         <string>ShipporiMincho-SemiBold.ttf</string>
         <string>BMKkubulim.otf</string>
         <string>Ownglyph.ttf</string>
+        <string>Cafe24PROUP.otf</string>
 	</array>
 	<key>UIDesignRequiresCompatibility</key>
 	<true/>
