feat: Moody6Template

--- a/TimeStamp/Info.plist
+++ b/TimeStamp/Info.plist
@@ -66,6 +66,7 @@
         <string>LINESeedKR-Bd.otf</string>
         <string>LINESeedKR-Rg.otf</string>
         <string>LINESeedKR-Th.otf</string>
+        <string>Monofett-Regular.ttf</string>
 	</array>
 	<key>UIDesignRequiresCompatibility</key>
 	<true/>
