--- a/TimeStamp/Info.plist
+++ b/TimeStamp/Info.plist
@@ -74,6 +74,7 @@
         <string>SpaceMono-BoldItalic.ttf</string>
         <string>SpaceMono-Italic.ttf</string>
         <string>SpaceMono-Regular.ttf</string>
+        <string>Notable-Regular.ttf</string>
 	</array>
 	<key>UIDesignRequiresCompatibility</key>
 	<true/>
