--- a/TimeStamp/Info.plist
+++ b/TimeStamp/Info.plist
@@ -43,7 +43,8 @@
 		<string>MoveSans-Light.otf</string>
 		<string>MoveSans-Medium.otf</string>
 		<string>ClimateCrisisKR-1990.otf</string>
-		<string>DungGeunMo.otf</string>
+        <string>DungGeunMo.otf</string>
+		<string>BoldDunggeunmo.ttf</string>
 		<string>EricaOne-Regular.ttf</string>
 		<string>PartialSansKR-Regular.otf</string>
 		<string>SUIT-Bold.otf</string>
