refactor: 앰플리튜드 api key 숨김

--- a/Secrets.xcconfig
+++ b/Secrets.xcconfig
@@ -13,3 +13,6 @@ GOOGLE_REVERSED_CLIENT_ID = com.googleusercontent.apps.18886173344-ad2jtnksaoa15
 // AdMob Application ID
 GAD_APP_ID = ca-app-pub-7896890737820919~5408954284
 
+// Amplitude API Key
+AMPLITUDE_API_KEY = 1f0951318fc0d23dea1fae935c017be9
+
