feat: Basic8Template

--- a/TimeStamp/Info.plist
+++ b/TimeStamp/Info.plist
@@ -76,6 +76,15 @@
         <string>SpaceMono-Italic.ttf</string>
         <string>SpaceMono-Regular.ttf</string>
         <string>Notable-Regular.ttf</string>
+        <string>Montserrat-Black.ttf</string>
+        <string>Montserrat-Bold.ttf</string>
+        <string>Montserrat-ExtraBold.ttf</string>
+        <string>Montserrat-ExtraLight.ttf</string>
+        <string>Montserrat-Light.ttf</string>
+        <string>Montserrat-Medium.ttf</string>
+        <string>Montserrat-Regular.ttf</string>
+        <string>Montserrat-SemiBold.ttf</string>
+        <string>Montserrat-Thin.ttf</string>
 	</array>
 	<key>UIDesignRequiresCompatibility</key>
 	<true/>
