feat: Active8Template

--- a/TimeStamp/Info.plist
+++ b/TimeStamp/Info.plist
@@ -85,6 +85,7 @@
         <string>Montserrat-Regular.ttf</string>
         <string>Montserrat-SemiBold.ttf</string>
         <string>Montserrat-Thin.ttf</string>
+        <string>RixInooAriDuri_Pro Regular.otf</string>
 	</array>
 	<key>UIDesignRequiresCompatibility</key>
 	<true/>
