feat: Digital8Template

--- a/TimeStamp/Info.plist
+++ b/TimeStamp/Info.plist
@@ -86,6 +86,7 @@
         <string>Montserrat-SemiBold.ttf</string>
         <string>Montserrat-Thin.ttf</string>
         <string>RixInooAriDuri_Pro Regular.otf</string>
+        <string>GalmuriMono11.ttf</string>
 	</array>
 	<key>UIDesignRequiresCompatibility</key>
 	<true/>
