--- a/TimeStamp/Info.plist
+++ b/TimeStamp/Info.plist
@@ -101,6 +101,8 @@
 	<string>$(GAD_APP_ID)</string>
 	<key>AMPLITUDE_API_KEY</key>
 	<string>$(AMPLITUDE_API_KEY)</string>
+	<key>NSUserTrackingUsageDescription</key>
+	<string>앱 사용 패턴을 분석하여 오류를 개선하고 앱 내 광고를 제공함으로써 더 나은 타임스탬프 기능을 제공하기 위해 추적 권한이 필요합니다.</string>
 	<key>SKAdNetworkItems</key>
 	<array>
 		<dict>
